# n8n-six-thinking-hats

./: .gitignore  .replit  README.md  TODO.md  package-lock.json  package.json  project_prompt.md  pyproject.toml  test_input.json  tsconfig.json
nodes/SixThinkingHats/: README.md  SixThinkingHats.node.ts  console_formatter.py  hat_handlers.py  index.js  package.json  six_hats_prompt.py  types.ts
nodes/SixThinkingHats/web_visualizer/: index.html  server.js
